fix aws cluster version add hello world app

--- a/management-clusters/golem/organizations/presales-demo/workload-clusters/presales-demo-gitops/mapi/apps/kustomization.yaml
+++ b/management-clusters/golem/organizations/presales-demo/workload-clusters/presales-demo-gitops/mapi/apps/kustomization.yaml
@@ -5,7 +5,8 @@ commonLabels:
 kind: Kustomization
 namespace: org-${organization}
 patches:
-  - path: patch_cluster_config.yaml
-    target:
-      kind: App
-resources: []
+- path: patch_cluster_config.yaml
+  target:
+    kind: App
+resources:
+- hello-world/appcr.yaml
