--- a/management-clusters/golem/organizations/presales-demo/workload-clusters/presales-demo-gitops.yaml
+++ b/management-clusters/golem/organizations/presales-demo/workload-clusters/presales-demo-gitops.yaml
@@ -2,7 +2,7 @@ apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
 metadata:
   name: golem-clusters-presales-demo-gitops
-  namespace: default
+  namespace: presales-demo
 spec:
   interval: 1m
   path: ./management-clusters/golem/organizations/presales-demo/workload-clusters/presales-demo-gitops/mapi
