add version again

--- a/management-clusters/golem/organizations/presales-demo/workload-clusters/presales-demo-gitops.yaml
+++ b/management-clusters/golem/organizations/presales-demo/workload-clusters/presales-demo-gitops.yaml
@@ -9,6 +9,8 @@ spec:
   postBuild:
     substitute:
       cluster_name: presales-demo-gitops
+      cluster_release: 1.1.0
+      default_apps_release: 0.52.0
       organization: presales-demo
   prune: false
   serviceAccountName: automation
