--- a/management-clusters/golem/organizations/presales-demo/workload-clusters/presales-demo-gitops.yaml
+++ b/management-clusters/golem/organizations/presales-demo/workload-clusters/presales-demo-gitops.yaml
@@ -10,7 +10,7 @@ spec:
     substitute:
       cluster_name: presales-demo-gitops
       cluster_release: ""
-      default_apps_release: 0.52.0
+      default_apps_release: ""
       organization: presales-demo
   prune: false
   serviceAccountName: automation
