--- a/management-clusters/golem/golem.yaml
+++ b/management-clusters/golem/golem.yaml
@@ -10,7 +10,7 @@ spec:
       name: presales-sops-gpg-master
   interval: 1m
   path: ./management-clusters/golem
-  prune: false
+  prune: true
   serviceAccountName: automation
   sourceRef:
     kind: GitRepository
