--- a/management-clusters/golem/organizations/presales-demo/workload-clusters/presales-demo-gitops/mapi/apps/demo-cadvisor/appcr.yaml
+++ b/management-clusters/golem/organizations/presales-demo/workload-clusters/presales-demo-gitops/mapi/apps/demo-cadvisor/appcr.yaml
@@ -1,11 +1,11 @@
 apiVersion: application.giantswarm.io/v1alpha1
 kind: App
 metadata:
-  name: presales-demo-gitops-hello-world
+  name: presales-demo-gitops-demo-cadvisor
   labels:
-    application.giantswarm.io/service: presales-demo-gitops-hello-world
+    application.giantswarm.io/service: presales-demo-gitops-demo-cadvisor
 spec:
   catalog: giantswarm-test
-  name: hello-world
+  name: cadvisor
   namespace: default
   version: 0.2.1
