--- a/.sops.yaml
+++ b/.sops.yaml
@@ -2,3 +2,9 @@ creation_rules:
 - encrypted_regex: ^(data|stringData)$
   path_regex: management-clusters/golem/secrets/.*\.enc\.yaml
   pgp: 5e5352b5b01fcce86056189d81c46b55bf997c79
+- encrypted_regex: ^(data|stringData)$
+  path_regex: management-clusters/golem/secrets/.*\.enc\.yaml
+  pgp: 9831a64c72d65a682073fc976f466670ae25ba3e
+- encrypted_regex: ^(data|stringData)$
+  path_regex: management-clusters/golem/organizations/presales-demo/workload-clusters/presales-demo-gitops/secrets/.*\.enc\.yaml
+  pgp: 83ca0c4294b756a74f79466369ef36795843fcc7
