--- a/management-clusters/golem/organizations/presales-demo/workload-clusters/presales-demo-gitops/mapi/apps/demo-cadvisor/servicemonitor.yaml
+++ b/management-clusters/golem/organizations/presales-demo/workload-clusters/presales-demo-gitops/mapi/apps/demo-cadvisor/servicemonitor.yaml
@@ -11,7 +11,7 @@ spec:
   endpoints:
   - interval: 60s 
     path: /metrics 
-    port: 8080       
+    targetPort: 8080       
     relabelings: [] 
   selector:
     matchLabels:
