--- a/management-clusters/golem/organizations/presales-demo/workload-clusters/presales-demo-gitops/mapi/apps/hello-world/appcr.yaml
+++ b/management-clusters/golem/organizations/presales-demo/workload-clusters/presales-demo-gitops/mapi/apps/hello-world/appcr.yaml
@@ -8,5 +8,5 @@ metadata:
 spec:
   catalog: giantswarm-test
   name: hello-world
-  namespace: default
+  namespace: org-presales-demo
   version: 2.3.2-da2cedc439b111c6e717c66f5aacacdc727520cc
