--- a/management-clusters/golem/organizations/presales-demo/workload-clusters/presales-demo-gitops/mapi/apps/kustomization.yaml
+++ b/management-clusters/golem/organizations/presales-demo/workload-clusters/presales-demo-gitops/mapi/apps/kustomization.yaml
@@ -10,5 +10,5 @@ patches:
     kind: App
 resources:
 - hello-world/appcr.yaml
-- demo-cadvisor/servicemonitor.yaml
-- demo-cadvisor/appcr.yaml
+- demo-grafana/servicemonitor.yaml
+- demo-grafana/appcr.yaml
