--- a/management-clusters/golem/golem.yaml
+++ b/management-clusters/golem/golem.yaml
@@ -1,7 +1,7 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
 metadata:
-  name: golem-gitops
+  name: presales-golem-gitops
   namespace: default
 spec:
   decryption:
