--- a/management-clusters/golem/organizations/presales-demo/workload-clusters/presales-demo-gitops/out-of-band/servicemonitor/servicemonitor.yaml
+++ b/management-clusters/golem/organizations/presales-demo/workload-clusters/presales-demo-gitops/out-of-band/servicemonitor/servicemonitor.yaml
@@ -6,7 +6,7 @@ metadata:
     ## The team name should be the name of your internal team.
     application.giantswarm.io/team: presales-demo
   name: presales-demo-grafana-monitor
-  namespace: org-presales-demo
+  namespace: default
 spec:
   endpoints:
   - interval: 60s 
