--- a/management-clusters/golem/organizations/presales-demo/workload-clusters/presales-demo-gitops/mapi/apps/demo-grafana/appcr.yaml
+++ b/management-clusters/golem/organizations/presales-demo/workload-clusters/presales-demo-gitops/mapi/apps/demo-grafana/appcr.yaml
@@ -8,6 +8,6 @@ metadata:
 spec:
   catalog: giantswarm
   name: grafana
-  namespace: default
+  namespace: org-presales-demo
   version: 2.13.0
   
