--- a/management-clusters/golem/organizations/presales-demo/workload-clusters/presales-demo-gitops/mapi/apps/demo-grafana/appcr.yaml
+++ b/management-clusters/golem/organizations/presales-demo/workload-clusters/presales-demo-gitops/mapi/apps/demo-grafana/appcr.yaml
@@ -2,12 +2,12 @@ apiVersion: application.giantswarm.io/v1alpha1
 kind: App
 metadata:
   name: presales-demo-gitops-demo-grafana
-  namespace: org-presales-demo
+  namespace: org-${organization}
   labels:
     application.giantswarm.io/service: presales-demo-gitops-demo-grafana
 spec:
   catalog: giantswarm
   name: grafana
-  namespace: org-presales-demo
+  namespace: org-${organization}
   version: 2.13.0
   
