--- a/management-clusters/golem/organizations/presales-demo/workload-clusters/presales-demo-gitops/mapi/apps/kustomization.yaml
+++ b/management-clusters/golem/organizations/presales-demo/workload-clusters/presales-demo-gitops/mapi/apps/kustomization.yaml
@@ -3,7 +3,7 @@ commonLabels:
   giantswarm.io/cluster: ${cluster_name}
   giantswarm.io/managed-by: flux
 kind: Kustomization
-namespace: default
+namespace: org-${organization}
 patches:
 - path: patch_cluster_config.yaml
   target:
