add user config values - grafana service monitor

--- a/management-clusters/golem/organizations/presales-demo/workload-clusters/presales-demo-gitops/out-of-band/servicemonitor/servicemonitor.yaml
+++ b/management-clusters/golem/organizations/presales-demo/workload-clusters/presales-demo-gitops/out-of-band/servicemonitor/servicemonitor.yaml
@@ -15,4 +15,4 @@ spec:
     relabelings: [] 
   selector:
     matchLabels:
-      application.giantswarm.io/service: presales-demo-gitops-demo-grafana
+      app.kubernetes.io/instance: demo-grafana
