--- a/management-clusters/golem/organizations/presales-demo/workload-clusters/presales-demo-gitops/mapi/apps/demo-grafana/appcr.yaml
+++ b/management-clusters/golem/organizations/presales-demo/workload-clusters/presales-demo-gitops/mapi/apps/demo-grafana/appcr.yaml
@@ -10,4 +10,8 @@ spec:
   name: grafana
   namespace: default
   version: 2.13.0
+  userConfig:
+    configMap:
+      name: presales-grafana-user-values
+      namespace: org-${organization}
   
