--- a/management-clusters/golem/organizations/presales-demo/workload-clusters/presales-demo-gitops/mapi/apps/demo-grafana/presales-grafana-user-values.yaml
+++ b/management-clusters/golem/organizations/presales-demo/workload-clusters/presales-demo-gitops/mapi/apps/demo-grafana/presales-grafana-user-values.yaml
@@ -1,4 +1,5 @@
-serviceMonitor:
-  enabled: true
-  labels:
-    application.giantswarm.io/team: presales-demo
+grafana:
+  serviceMonitor:
+    enabled: true
+    labels:
+      application.giantswarm.io/team: presales-demo
