--- a/management-clusters/golem/organizations/presales-demo/workload-clusters/presales-demo-gitops/mapi/apps/kustomization.yaml
+++ b/management-clusters/golem/organizations/presales-demo/workload-clusters/presales-demo-gitops/mapi/apps/kustomization.yaml
@@ -4,13 +4,6 @@ commonLabels:
   giantswarm.io/managed-by: flux
 kind: Kustomization
 namespace: org-${organization}
-configMapGenerator:
-  - files:
-    - values=demo-grafana/presales-grafana-user-values.yaml
-    name:  presales-grafana-user-values
-    namespace: org-${organization}
-generatorOptions:
-  disableNameSuffixHash: true
 patches:
 - path: patch_cluster_config.yaml
   target:
@@ -18,3 +11,5 @@ patches:
 resources:
 - hello-world/appcr.yaml
 - demo-grafana/appcr.yaml
+- grafana/appcr.yaml
+- grafana/configmap.yaml
