no prune cluster 2

--- a/management-clusters/golem/organizations/presales-demo/workload-clusters/presales-demo-gitops-2.yaml
+++ b/management-clusters/golem/organizations/presales-demo/workload-clusters/presales-demo-gitops-2.yaml
@@ -16,7 +16,7 @@ spec:
       cluster_release: 1.0.0
       default_apps_release: 0.52.0
       organization: presales-demo
-  prune: true
+  prune: false
   serviceAccountName: automation
   sourceRef:
     kind: GitRepository
