--- a/management-clusters/golem/organizations/presales-demo/workload-clusters/kustomization.yaml
+++ b/management-clusters/golem/organizations/presales-demo/workload-clusters/kustomization.yaml
@@ -2,4 +2,4 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
 - presales-demo-gitops.yaml
-- presales-demo-gitops-2.yaml
+- presales-test-gitops.yaml
