--- a/management-clusters/golem/organizations/presales-demo/workload-clusters/presales-test-gitops.yaml
+++ b/management-clusters/golem/organizations/presales-demo/workload-clusters/presales-test-gitops.yaml
@@ -1,18 +1,18 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
 metadata:
-  name: golem-clusters-presales-demo-gitops
+  name: golem-clusters-presales-test-gitops
   namespace: default
 spec:
   decryption:
     provider: sops
     secretRef:
-      name: presales-sops-gpg-master
+      name: presales-sops-gpg-master  
   interval: 1m
-  path: ./management-clusters/golem/organizations/presales-demo/workload-clusters/presales-demo-gitops/mapi
+  path: ./management-clusters/golem/organizations/presales-demo/workload-clusters/presales-test-gitops/mapi
   postBuild:
     substitute:
-      cluster_name: presales-demo-gitops
+      cluster_name: presales-test-gitops
       cluster_release: 1.0.0
       default_apps_release: 0.52.0
       organization: presales-demo
