change grafana by podinfo

--- a/management-clusters/golem/organizations/presales-demo/workload-clusters/presales-demo-gitops/mapi/apps/kustomization.yaml
+++ b/management-clusters/golem/organizations/presales-demo/workload-clusters/presales-demo-gitops/mapi/apps/kustomization.yaml
@@ -10,6 +10,5 @@ patches:
     kind: App
 resources:
 - hello-world/appcr.yaml
-- grafana/appcr.yaml
-- grafana/configmap.yaml
-- grafana/dashboard.yaml
+- podinfo/appcr.yaml
+- podinfo/configmap.yaml
