--- a/management-clusters/golem/organizations/presales-demo/workload-clusters/presales-demo-gitops/mapi/apps/podinfo/configmap.yaml
+++ b/management-clusters/golem/organizations/presales-demo/workload-clusters/presales-demo-gitops/mapi/apps/podinfo/configmap.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 data:
   values: |
-    grafana:
+    podinfo:
       serviceMonitor:
         enabled: true
         labels:
           application.giantswarm.io/team: presales-demo
 kind: ConfigMap
 metadata:
-  name: presales-demo-gitops-grafana-user-values
+  name: presales-demo-gitops-podinfo-user-values
   namespace: org-presales-demo
