--- a/management-clusters/golem/organizations/presales-demo/workload-clusters/presales-demo-gitops/mapi/apps/podinfo/configmap.yaml
+++ b/management-clusters/golem/organizations/presales-demo/workload-clusters/presales-demo-gitops/mapi/apps/podinfo/configmap.yaml
@@ -1,11 +1,20 @@
 apiVersion: v1
 data:
   values: |
-    podinfo:
-      serviceMonitor:
-        enabled: true
-        labels:
-          application.giantswarm.io/team: presales-demo
+    serviceMonitor:
+      enabled: true
+      labels:
+        application.giantswarm.io/team: presales-demo
+    faults:
+      error: true
+      delay: true
+    resources:
+      requests:
+        cpu: 0.2
+        memory: 200M
+      limits:
+        cpu: 0.4
+        memory: 400M
 kind: ConfigMap
 metadata:
   name: presales-demo-gitops-podinfo-user-values
