--- a/management-clusters/golem/organizations/presales-demo/workload-clusters/presales-demo-gitops/mapi/apps/podinfo/configmap.yaml
+++ b/management-clusters/golem/organizations/presales-demo/workload-clusters/presales-demo-gitops/mapi/apps/podinfo/configmap.yaml
@@ -3,7 +3,7 @@ data:
   values: |
     serviceMonitor:
       enabled: true
-      labels:
+      additionalLabels:
         application.giantswarm.io/team: presales-demo
     faults:
       error: true
