--- a/management-clusters/golem/organizations/presales-demo/workload-clusters/presales-demo-gitops/mapi/apps/podinfo/configmap.yaml
+++ b/management-clusters/golem/organizations/presales-demo/workload-clusters/presales-demo-gitops/mapi/apps/podinfo/configmap.yaml
@@ -6,15 +6,8 @@ data:
       additionalLabels:
         application.giantswarm.io/team: presales-demo
     faults:
-      error: false
-      delay: false
-    resources:
-      requests:
-        cpu: 0.2
-        memory: 200M
-      limits:
-        cpu: 0.4
-        memory: 400M
+      error: true
+      delay: true
 kind: ConfigMap
 metadata:
   name: presales-demo-gitops-podinfo-user-values
