--- a/management-clusters/golem/organizations/presales-demo/workload-clusters/presales-demo-gitops/mapi/apps/podinfo/configmap.yaml
+++ b/management-clusters/golem/organizations/presales-demo/workload-clusters/presales-demo-gitops/mapi/apps/podinfo/configmap.yaml
@@ -9,6 +9,9 @@ data:
       error: true
       delay: true
     securityContext:
+      seccompProfile:
+        type: RuntimeDefault
+      runAsNonRoot: true
       allowPrivilegeEscalation: false
       capabilities:
         drop:
