--- a/management-clusters/golem/organizations/presales-demo/workload-clusters/presales-demo-gitops/mapi/apps/podinfo/configmap.yaml
+++ b/management-clusters/golem/organizations/presales-demo/workload-clusters/presales-demo-gitops/mapi/apps/podinfo/configmap.yaml
@@ -10,7 +10,7 @@ data:
       delay: true
     securityContext:
       seccompProfile:
-        type: Localhost
+        type: RuntimeDefault
       runAsNonRoot: true
       allowPrivilegeEscalation: false
       capabilities:
