--- a/management-clusters/golem/organizations/presales-demo/workload-clusters/presales-demo-gitops/mapi/apps/podinfo/configmap.yaml
+++ b/management-clusters/golem/organizations/presales-demo/workload-clusters/presales-demo-gitops/mapi/apps/podinfo/configmap.yaml
@@ -9,6 +9,8 @@ data:
       error: true
       delay: true
     securityContext:
+      runAsUser: 1000
+      runAsGroup: 1000
       seccompProfile:
         type: RuntimeDefault
       runAsNonRoot: true
