--- a/management-clusters/golem/organizations/presales-demo/workload-clusters/kustomization.yaml
+++ b/management-clusters/golem/organizations/presales-demo/workload-clusters/kustomization.yaml
@@ -1,4 +1,4 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-resources: []
-#- presales-demo-gitops.yaml
+resources:
+- presales-demo-gitops.yaml
