fix policy pod name

--- a/management-clusters/golem/organizations/presales-demo/workload-clusters/presales-demo-gitops/out-of-band/podinfo-kyverno-policyException.yaml
+++ b/management-clusters/golem/organizations/presales-demo/workload-clusters/presales-demo-gitops/out-of-band/podinfo-kyverno-policyException.yaml
@@ -30,6 +30,6 @@ spec:
             - Deployment
             - Pod
           names:
-          - podinfo
+          - podinfo*
           namespaces:
           - default
