--- a/management-clusters/golem/organizations/presales-demo/workload-clusters/presales-demo-gitops/mapi/apps/podinfo/configmap.yaml
+++ b/management-clusters/golem/organizations/presales-demo/workload-clusters/presales-demo-gitops/mapi/apps/podinfo/configmap.yaml
@@ -7,7 +7,7 @@ data:
         application.giantswarm.io/team: presales-demo
     faults:
       error: false
-      delay: false
+      delay: true
 kind: ConfigMap
 metadata:
   name: presales-demo-gitops-podinfo-user-values
