--- a/management-clusters/golem/organizations/presales-demo/workload-clusters/presales-demo-gitops/mapi/apps/podinfo/configmap.yaml
+++ b/management-clusters/golem/organizations/presales-demo/workload-clusters/presales-demo-gitops/mapi/apps/podinfo/configmap.yaml
@@ -6,7 +6,7 @@ data:
       additionalLabels:
         application.giantswarm.io/team: presales-demo
     faults:
-      error: false
+      error: true
       delay: true
 kind: ConfigMap
 metadata:
